# BoardGameTracking

./: .gitignore  README.md  analisys.ipynb  board_preparator.py  game_tracker.py  left_part_analyzer.py  pyproject.toml  report.ipynb  right_part_analyzer.py  utils.py
